<resources>
    <string name="app_name">Speedometer</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_home">Speedometer</string>


    <string name="latitude">Latitude:</string>
    <string name="start_value">---</string>
    <string name="longitude">Longitude:</string>
    <string name="error">error(+/-): ---</string>
    <string name="atltitude">atltitude:</string>
    <string name="inclinacao">inclinacao:</string>
    <string name="acuracy">acuracy:</string>
    <string name="time">time:</string>
    <string name="speed">Speed:</string>

    <!--formaters-->
    <string name="speed_formater">%1$4.2f km/h</string>
    <string name="speed_error_formater">error(+/-): %1$4.2f km/h</string>

    <string name="distance_formater">%1$4.2f m</string>
    <string name="distance_error_formater">error(+/-): %1$4.2f m</string>

    <string name="time_formater">%1$d s</string>

    <string name="degress_formater">%1$3.2f%2$c</string>
    <string name="degress_error_formater">error(+/-): %1$3.2f%2$c</string>

    <string name="long_degress_formater">%1$3.5f%2$c</string>
</resources>
