<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.HomeActivity"
    tools:showIn="@layout/activity_home"
    android:orientation="vertical">

    <!--Lat/Lon-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/pad_top_1">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="@dimen/txt_size_1"
                android:text="@string/latitude" />
            <TextView
                android:id="@+id/home_lat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_size_1"
                android:text="@string/start_value"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="@dimen/txt_size_1"
                android:text="@string/longitude" />
            <TextView
                android:id="@+id/home_lon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_size_1"
                android:text="@string/start_value"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:gravity="center"/>

    <!--Alt/Inc-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/pad_top_1">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="@dimen/txt_size_2"
                android:text="@string/atltitude" />
            <TextView
                android:id="@+id/home_alt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_size_3"
                android:text="@string/start_value"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="error(+/-): ---"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="@dimen/txt_size_2"
                android:text="@string/inclinacao" />
            <TextView
                android:id="@+id/home_inc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_size_3"
                android:text="@string/start_value"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="error(+/-):  ---"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="@dimen/txt_size_3"
            android:text="@string/speed" />
        <TextView
            android:id="@+id/home_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_size_4"
            android:text="@string/start_value"/>
    </LinearLayout>

    <!--Acu/Time-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="2dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="@dimen/txt_size_1"
                android:text="@string/acuracy" />
            <TextView
                android:id="@+id/home_acu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_size_2"
                android:text="@string/start_value"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="@dimen/txt_size_1"
                android:text="@string/time" />
            <TextView
                android:id="@+id/home_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_size_2"
                android:text="@string/start_value"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>